language change logic completed

--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -3,6 +3,13 @@
     "name": "برایس سرافین",
     "job": "مدیر و طراح محصول",
     "location": "پاریس، فرانسه",
-    "summary": "کامپیوتر جوان مشتاق گیک، طراح آزاد و عاشق استقلال، من تجربه زیادی در پروژه های گرافیکی دارم و همیشه بهترین های خودم را برای رسیدن شما به موفقیت می دهم."
-   
+    "summary": "کامپیوتر جوان مشتاق گیک، طراح آزاد و عاشق استقلال، من تجربه زیادی در پروژه های گرافیکی دارم و همیشه بهترین های خودم را برای رسیدن شما به موفقیت می دهم.",
+    "selectedLanguage": "انتخاب زبان",
+    "enLanguage": "انگلیسی",
+    "faLanguage": "فارسی",
+    "skills": "مهارت ها",
+    "personalInformation": "اطلاعات فردی",
+    "email": "ایمیل",
+    "password": "رمز عبور",
+    "save": "ذخیره"
 }
