--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,15 @@
     "name": "Brice Séraphin",
     "job": "Product& Product Designer",
     "location": "Paris, France",
-    "summary": "Enthusiastic young computer Geek, Freelance Designer in love of independence, I have alot of experience in graphical projects, and always give the best of myself to bring you to success."
+    "summary": "Enthusiastic young computer Geek, Freelance Designer in love of independence, I have alot of experience in graphical projects, and always give the best of myself to bring you to success.",
+    "selectedLanguage":"Selected Language",
+    "enLanguage":"English",
+    "faLanguage":"Farsi",
+    "skills":"skills",
+    "personalInformation":"Personal Information",
+    "email":"Email",
+    "password":"Password",
+    "save":"Save"
+
    
 }
